tests/e2e/invalid_return_type2.error
Error: syntax error in story at line 1, column 22

1|    function foo returns foo
                           ^

E0041: `f` is not allowed here
